--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,6 +263,7 @@ body,html{
 
 .major-comps .item{
     transition: 0.5s;
+    cursor: pointer;
 }
 
 .major-comps .item .wrapper{
@@ -387,4 +388,81 @@ body,html{
     background: linear-gradient(to bottom,#0000,rgba(0, 0, 0, 0.755));
     width: 100%;
     height: 100%;
+}
+
+
+/* My List/User's list */
+
+.user-list{
+    margin-top: 7vw;
+    padding: 0vw 3vw;
+    color: #fff;
+    margin-bottom: 5vw;
+}
+
+.user-list .user{
+    overflow: hidden;
+    max-height: 23vw;
+}
+
+.user-list .user .item{
+    max-width: 100%;
+    height: 20vw;
+    cursor: pointer;
+}
+
+/* list-items addition */
+
+.user-list .user .i1 .image-container{
+    background: url('/images/list-images/cheVrma.jpg');
+}
+
+.user-list .user .i2 .image-container{
+    background: url('/images/list-images/AEW.jpg');
+}
+
+.user-list .user .i3 .image-container{
+    background: url('/images/list-images/FinVGer.jpg');
+}
+
+.user-list .user .i4 .image-container{
+    background: url('/images/list-images/gerVjap.jpg');
+}
+
+.user-list .user .i5 .image-container{
+    background: url('/images/list-images/arsVcity.jpg');
+}
+
+.user-list .user .i6 .image-container{
+    background: url('/images/list-images/MIvRR.jpeg');
+}
+
+.user-list .user .i7 .image-container{
+    background: url('/images/list-images/cheVrma.jpg');
+}
+
+/* For all items */
+
+.user-list .user .item .image-container{
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 5%;
+    height: 15vw;
+    width: 26.5vw;
+}
+
+.user-list .user .content{
+    position: absolute;
+    top: 14vw;
+    width: 26.5vw;
+    z-index: 3;
+}
+
+.user-list .user .content .game{
+    font-size: 1.5vw;
+    margin-bottom: 0.2rem;
+}
+
+.user-list .user .content .competetion{
+    color: rgba(255, 255, 255, 0.853);
 }
