html class patch

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -310,6 +310,62 @@
             </div>
         </div>
 
+        <div class="user-list">
+            <div class="title">
+                <h2 style="font-size: 1.7vw;">My List</h2>
+            </div>
+            <div class="owl-carousel owl-theme user">
+                <div class="item i1">
+                    <div class="content">
+                        <p class="game">Chelsea Vs Real Madird</p>
+                        <span class="competetion">UEFA Champions League Semi-Final</span>
+                    </div>
+                    <div class="image-container"></div>
+                    
+                </div>
+
+                <div class="item i2">
+                    <div class="content">
+                        <p class="game">AEW Fyter Fest 2022</p>
+                        <span class="competetion">All Elite Wresting - Dynamite</span>
+                    </div>
+                    <div class="image-container"></div>
+                </div>
+
+                <div class="item i3">
+                    <div class="content">
+                        <p class="game">Finalnd Vs Germany</p>
+                        <span class="competetion">UEFA Women's Euro England 2022</span>
+                    </div>
+                    <div class="image-container"></div>
+                </div>
+
+                <div class="item i4">
+                    <div class="content">
+                        <p class="game">Germany Vs Japan</p>
+                        <span class="competetion">FIFA World Cup Qatar 2022 - Group Stage</span>
+                    </div>
+                    <div class="image-container"></div>
+                </div>
+
+                <div class="item i5">
+                    <div class="content">
+                        <p class="game">Arsenal Vs Manchester City</p>
+                        <span class="competetion">English Premier League 2022/23</span>
+                    </div>
+                    <div class="image-container"></div>
+                </div>
+
+                <div class="item i6">
+                    <div class="content">
+                        <p class="game">Mumbai Indians Vs Rajasthan Royals</p>
+                        <span class="competetion">Indian Premier League 2023</span>
+                    </div>
+                    <div class="image-container"></div>
+                </div>
+            </div>
+        </div>
+
         
 
         <%- include('./partials/footer') %> 
