--- a/public/css/style.css
+++ b/public/css/style.css
@@ -393,23 +393,25 @@ body,html{
 
 /* My List/User's list */
 
-.user-list{
+.list-carousel{
     margin-top: 3vw;
     padding: 0vw 3vw;
     color: #fff;
     margin-bottom: 5vw;
 }
 
-.user-list .user{
+.list-carousel .user{
     overflow: hidden;
     max-height: 23vw;
 }
 
-.user-list .user .item{
+.list-carousel .user .item{
     max-width: 100%;
     height: 20vw;
     cursor: pointer;
 }
+
+
 
 /* list-items addition */
 
@@ -437,13 +439,37 @@ body,html{
     background: url('/images/list-images/MIvRR.jpeg');
 }
 
-.user-list .user .i7 .image-container{
-    background: url('/images/list-images/cheVrma.jpg');
+
+.live .user .i1 .image-container{
+    background: url('/images/live-images/F1.jpg');
 }
+
+.live .user .i2 .image-container{
+    background: url('/images/live-images/engVspa.jpg');
+}
+
+.live .user .i3 .image-container{
+    background: url('/images/live-images/UFC.jpg');
+}
+
+.live .user .i4 .image-container{
+    background: url('/images/live-images/PSG.jpg');
+}
+
+.live .user .i5 .image-container{
+    background: url('/images/live-images/usVeng.jpg');
+}
+
+.live .user .i6 .image-container{
+    background: url('/images/live-images/barVmun.jpeg');
+}
+
+
+
 
 /* For all items */
 
-.user-list .user .item .image-container{
+.list-carousel .user .item .image-container{
     background-size: contain;
     background-repeat: no-repeat;
     border-radius: 5%;
@@ -451,18 +477,19 @@ body,html{
     width: 26.5vw;
 }
 
-.user-list .user .content{
+.list-carousel .user .content{
     position: absolute;
     top: 14vw;
     width: 26.5vw;
     z-index: 3;
 }
 
-.user-list .user .content .game{
+.list-carousel .user .content .game{
     font-size: 1.5vw;
+    font-weight: 700;
     margin-bottom: 0.2rem;
 }
 
-.user-list .user .content .competetion{
+.list-carousel .user .content .competetion{
     color: rgba(255, 255, 255, 0.853);
 }
