--- a/views/index.ejs
+++ b/views/index.ejs
@@ -254,7 +254,7 @@
         </div>
 
         
-        <div class="user-list">
+        <div class="user-list list-carousel">
             <div class="title">
                 <h2 style="font-size: 1.7vw;">My List</h2>
             </div>
@@ -310,15 +310,15 @@
             </div>
         </div>
 
-        <div class="user-list">
+        <div class="live list-carousel">
             <div class="title">
-                <h2 style="font-size: 1.7vw;">My List</h2>
+                <h2 style="font-size: 1.7vw;">Live - Watch Now</h2>
             </div>
             <div class="owl-carousel owl-theme user">
                 <div class="item i1">
                     <div class="content">
-                        <p class="game">Chelsea Vs Real Madird</p>
-                        <span class="competetion">UEFA Champions League Semi-Final</span>
+                        <p class="game">French Grand Prix Practice 1</p>
+                        <span class="competetion">Formula 1</span>
                     </div>
                     <div class="image-container"></div>
                     
@@ -326,40 +326,40 @@
 
                 <div class="item i2">
                     <div class="content">
-                        <p class="game">AEW Fyter Fest 2022</p>
-                        <span class="competetion">All Elite Wresting - Dynamite</span>
+                        <p class="game">England Vs Spain</p>
+                        <span class="competetion">UEFA Woemn's Euro England 2022</span>
                     </div>
                     <div class="image-container"></div>
                 </div>
 
                 <div class="item i3">
                     <div class="content">
-                        <p class="game">Finalnd Vs Germany</p>
-                        <span class="competetion">UEFA Women's Euro England 2022</span>
+                        <p class="game">UFC 277 Live</p>
+                        <span class="competetion">Ultimate Fighting Championship</span>
                     </div>
                     <div class="image-container"></div>
                 </div>
 
                 <div class="item i4">
                     <div class="content">
-                        <p class="game">Germany Vs Japan</p>
-                        <span class="competetion">FIFA World Cup Qatar 2022 - Group Stage</span>
+                        <p class="game">PSG Vs Olympic Marseille</p>
+                        <span class="competetion">Uber Eats Ligue 1</span>
                     </div>
                     <div class="image-container"></div>
                 </div>
 
                 <div class="item i5">
                     <div class="content">
-                        <p class="game">Arsenal Vs Manchester City</p>
-                        <span class="competetion">English Premier League 2022/23</span>
+                        <p class="game">USA Vs England</p>
+                        <span class="competetion">FIFA World Cup 2022</span>
                     </div>
                     <div class="image-container"></div>
                 </div>
 
                 <div class="item i6">
                     <div class="content">
-                        <p class="game">Mumbai Indians Vs Rajasthan Royals</p>
-                        <span class="competetion">Indian Premier League 2023</span>
+                        <p class="game">Barcelona Vs Manchester United</p>
+                        <span class="competetion">UEFA Europa League 2022/23</span>
                     </div>
                     <div class="image-container"></div>
                 </div>
