--- a/views/partials/menu-bar.ejs
+++ b/views/partials/menu-bar.ejs
@@ -13,6 +13,9 @@
             <li style="margin-bottom: 1vw;"><a href="#" data-name="bookmark"> <i class="fa-regular fa-bookmark"></i></a></li>
         </div>
         
+        <div class="menu-hover">
+            
+        </div>
 
     </ul>
 </nav>
