--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,11 +56,16 @@ body,html{
     padding-left: 0.2vw;
 }
 
-.menu-bar ul li .active{
-    background-color: rgba(0,0,0,47);
-    border-radius: 50%;
+.menu-bar .menu-hover{
+    position: absolute;
+    /* top: 6.25vw; */
+    /* left: .55vw; */
+    padding: 1.1vw;
+    border-radius: 100%;
+    background-color: rgba(0, 0, 0, 0.475);
+    z-index: -1;
+    transition: 0.3s;
 }
-
 
 .top .title-bar{
     position: absolute;
