--- a/views/index.ejs
+++ b/views/index.ejs
@@ -366,6 +366,11 @@
             </div>
         </div>
 
+
+        <div class="originals">
+            <div class="item i1"></div>
+            <div class="item i2"></div>
+        </div>
         <!-- Script to be loaded before script.js file -->
         <script> 
             document.querySelectorAll('.menu-bar a').forEach((item)=>{
