--- a/views/index.ejs
+++ b/views/index.ejs
@@ -371,6 +371,62 @@
             <div class="item i1"></div>
             <div class="item i2"></div>
         </div>
+
+        <div class="ucl list-carousel">
+            <div class="title">
+                <h2 style="font-size: 1.7vw;">UEFA Champions League 2022/23</h2>
+            </div>
+            <div class="owl-carousel owl-theme user">
+                <div class="item i1">
+                    <div class="content">
+                        <p class="game">Liverpool Vs Real Madrid</p>
+                        <span class="competetion">UEFA Champions League Final</span>
+                    </div>
+                    <div class="image-container"></div>
+                    
+                </div>
+
+                <div class="item i2">
+                    <div class="content">
+                        <p class="game">Manchester City Vs Real Madird</p>
+                        <span class="competetion">UEFA Champions League Semi-finals</span>
+                    </div>
+                    <div class="image-container"></div>
+                </div>
+
+                <div class="item i3">
+                    <div class="content">
+                        <p class="game">Liverpool vs Villareal</p>
+                        <span class="competetion">UEFA Champions League Semi-finals</span>
+                    </div>
+                    <div class="image-container"></div>
+                </div>
+
+                <div class="item i4">
+                    <div class="content">
+                        <p class="game">Villareal Vs Bayern Munich</p>
+                        <span class="competetion">UEFA Champions League Quarter-fianls</span>
+                    </div>
+                    <div class="image-container"></div>
+                </div>
+
+                <div class="item i5">
+                    <div class="content">
+                        <p class="game">PSG Vs Bayern Munich</p>
+                        <span class="competetion">UEFA Champions League Round of 16</span>
+                    </div>
+                    <div class="image-container"></div>
+                </div>
+
+                <div class="item i6">
+                    <div class="content">
+                        <p class="game">Borussia Dortmund vs Chelsea</p>
+                        <span class="competetion">UEFA Champions League Round of 16</span>
+                    </div>
+                    <div class="image-container"></div>
+                </div>
+            </div>
+        </div>        
         <!-- Script to be loaded before script.js file -->
         <script> 
             document.querySelectorAll('.menu-bar a').forEach((item)=>{
