minor changes in HTML and CSS

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -278,7 +278,7 @@
 
                 <div class="item i3">
                     <div class="content">
-                        <p class="game">Finalnd Vs Germany</p>
+                        <p class="game">Finland Vs Germany</p>
                         <span class="competetion">UEFA Women's Euro England 2022</span>
                     </div>
                     <div class="image-container"></div>
@@ -327,7 +327,7 @@
                 <div class="item i2">
                     <div class="content">
                         <p class="game">England Vs Spain</p>
-                        <span class="competetion">UEFA Woemn's Euro England 2022</span>
+                        <span class="competetion">UEFA Women's Euro England 2022</span>
                     </div>
                     <div class="image-container"></div>
                 </div>
@@ -428,7 +428,15 @@
             </div>
         </div>     
         
-           
+        <div class="competetions">
+            <div class="item-wrapper">
+                <div class="item i1"></div>
+                <div class="item i1"></div>
+                <div class="item i1"></div>
+                <div class="item i1"></div>
+                <div class="item i1"></div>
+            </div>
+        </div>   
         <!-- Script to be loaded before script.js file -->
         <script> 
             document.querySelectorAll('.menu-bar a').forEach((item)=>{
