--- a/views/index.ejs
+++ b/views/index.ejs
@@ -429,12 +429,17 @@
         </div>     
         
         <div class="competetions">
+            <div class="title">
+                <h2 style="font-size: 1.7vw;">
+                    Football Leagues
+                </h2>
+            </div>
             <div class="item-wrapper">
                 <div class="item i1"></div>
-                <div class="item i1"></div>
-                <div class="item i1"></div>
-                <div class="item i1"></div>
-                <div class="item i1"></div>
+                <div class="item i2"></div>
+                <div class="item i3"></div>
+                <div class="item i4"></div>
+                <div class="item i5"></div>
             </div>
         </div>   
         <!-- Script to be loaded before script.js file -->
